# bv-sized-float

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  bv-sized-float.cabal  cabal.project  stack.yaml
src/Data/BitVector/Sized/: Float.hs
src/Data/BitVector/Sized/Float/: App.hs
