name:                bv-sized-float
version:             0.1.0
category:            Bit Vectors
synopsis:            Floating point operations and expressions for bv-sized
-- description:
homepage:            https://github.com/benjaminselfridge/bv-sized-float#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Data.BitVector.Sized.Float
                       Data.BitVector.Sized.Float.App
  build-depends:       base >= 4.7 && < 5
                     , bv-sized >= 0.5.0 && < 0.6
                     , containers >= 0.5.10 && < 0.6
                     , mtl >= 2 && < 3
                     , parameterized-utils
                     , softfloat-hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
